<resources>
    <string name="app_name">About me</string>
    <string name="name">Yusley</string>
    <string name="yellow_star">Yello star</string>
    <string name="bio">
        Hello.\n
        My name is Yusley Rosabal Espinosa.\n
        I am going to talk about me.\n
        I am from Cuba. I was born in Havana, but
        when I was three years old, my mom and I moved to another city, Bayamo.
        I finish my elementary school there. Later, my middle and high school.\n
        When I was 17 years old, I had to go to a mandatory military service.
        Afterward, I went to one of the best Universities in Cuba, University of Santiago.
        I studied Mathematics for five years over there.\n
        I moved to the United States of America in 2011. Since then, I have tried to learn English.
        That is why I started studying in CSN. I decided I wanted to study another career. I chose
        Programming because I have always wanted to study it.\n
        I work as a cook at Bally\'s Casino. I love cooking, however my real passion is programming.
        \n
        Good bye\n
        Thank you\n
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
